:sparkles: [#49] added publication status field in publications and documents api endpoints. And for the publication made sure to validate if a revoked publication cannot be created and a revoked pubication cannot be updated
